--- a/AndMongoDemo/src/main/res/layout/activity_main.xml
+++ b/AndMongoDemo/src/main/res/layout/activity_main.xml
@@ -9,8 +9,14 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/food"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tomorrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
